--- a/new_structure/assets/css/common.css
+++ b/new_structure/assets/css/common.css
@@ -34,3 +34,20 @@ body {
     /* max-width: 900px; */
     margin: 0 auto;
 }
+
+div.row { 
+    border: 1px solid #ccc;
+    border-right: 0px;
+    border-left: 0px;
+    border-bottom: 0px;
+
+    border-collapse: separate;
+    border-spacing: 1px 1px;
+
+    width: 99.5%;
+    margin-right: auto;
+    margin-left: auto;
+}
+.container div.row:last-child {
+    border-bottom: 1px solid #ccc;
+}
