updated sections a bit...

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -75,3 +75,11 @@ div.row {
 .container div.row:last-child {
     border-bottom: 1px solid #ccc;
 }
+
+.vertical-align {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
